force-app/main/default/objects/Employment_Details__c/fields/Is_Lead_Detail_Done__c.field-meta.xml
<CustomField>
    <fullName>Is_Lead_Detail_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Lead Detail Done</label>
    <type>Checkbox</type>
</CustomField>