force-app/main/default/objects/Employment_Details__c/fields/Name_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Business__c</fullName>
    <label>Name of Business</label>
    <length>80</length>
    <type>Text</type>
</CustomField>