force-app/main/default/objects/Employment_Details__c/fields/No_of_years_Employment_Business__c.field-meta.xml
<CustomField>
    <fullName>No_of_years_Employment_Business__c</fullName>
    <label>No of years Employment/ Business</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>